--- a/.gitea/workflows/gitea-ci.yaml
+++ b/.gitea/workflows/gitea-ci.yaml
@@ -9,13 +9,33 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: catthehacker/ubuntu:act-latest
     if: gitea.ref == 'refs/heads/main'
     steps:
-      - uses: actions/checkout@v4
-      - name: Install Docker
-        run: curl -fsSL https://get.docker.com | sh
-      - name: Deploy
-        run: |
-            echo "${{ secrets.GITEATOKEN }}" | docker login git.mausas.de -u maurice.hansen --password-stdin
-            docker build -t git.mausas.de/${{ gitea.repository }}:latest .
-            docker push git.mausas.de/${{ gitea.repository }}
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker BuildX
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: git.mausas.de
+          username: ${{ gitea.actor }}
+          password: ${{ secrets.GITEATOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile.custom
+          platforms: |
+            linux/amd64           
+          push: true
+          tags: |
+            git.mausas.de/${{ gitea.repository }}:latest  
