--- a/.gitea/workflows/gitea-ci.yaml
+++ b/.gitea/workflows/gitea-ci.yaml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.custom
+          file: ./Dockerfile
           platforms: |
             linux/amd64           
           push: true
